Acme website done and formatting changes

--- a/CSS Crash Course/My Website/index.html
+++ b/CSS Crash Course/My Website/index.html
@@ -34,25 +34,30 @@
         </div>
     </section>
 
-    <div class = "container">
-    <section id="main">
-        <h1>Welcome</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae officiis vitae repudiandae perferendis unde
-            incidunt quas minima sint, earum, fugiat quo. Error numquam modi ipsum praesentium similique quaerat laborum
-            quas rem commodi nulla doloremque ratione necessitatibus in quasi illum repellendus, sunt impedit, ea nisi
-            quis iste assumenda ipsa fuga tenetur. Neque expedita quaerat modi asperiores, dolor sed non necessitatibus
-            ad minus reprehenderit, deleniti aperiam sunt provident officia sint nam.</p>
-    </section>
+    <div class="container">
+        <section id="main">
+            <h1>Welcome</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae officiis vitae repudiandae perferendis
+                unde
+                incidunt quas minima sint, earum, fugiat quo. Error numquam modi ipsum praesentium similique quaerat
+                laborum
+                quas rem commodi nulla doloremque ratione necessitatibus in quasi illum repellendus, sunt impedit, ea
+                nisi
+                quis iste assumenda ipsa fuga tenetur. Neque expedita quaerat modi asperiores, dolor sed non
+                necessitatibus
+                ad minus reprehenderit, deleniti aperiam sunt provident officia sint nam.</p>
+        </section>
 
-    <aside id="sidebar">
-        <p></p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quaerat quibusdam voluptate delectus minus
-        quidem! Ut harum fuga quisquam tenetur delectus tempore ducimus, ipsa hic.
-    </aside>
-</div>
+        <aside id="sidebar">
+            <p></p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quaerat quibusdam voluptate delectus
+            minus
+            quidem! Ut harum fuga quisquam tenetur delectus tempore ducimus, ipsa hic.
+        </aside>
+    </div>
 
-<footer id = "main-footer">
-    <p>Copyright &copy;2017 My Website</p>
-</footer>
+    <footer id="main-footer">
+        <p>Copyright &copy;2022 My Website</p>
+    </footer>
 
 </body>
 
