Fixed typing mistake

--- a/Acme/services.html
+++ b/Acme/services.html
@@ -42,7 +42,7 @@
         <div class="container">
             <article id="main-col">
                 <h1 class="page-title">Services</h1>
-                <u1 id="services">
+                <ul id="services">
                     <li>
                         <h3>Website Design</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, soluta eveniet iusto error
@@ -64,7 +64,7 @@
                             Assumenda dolores pariatur blanditiis, cupiditate fuga ratione.</p>
                         <p>Pricing: $69 per month</p>
                     </li>
-                </u1>
+                </ul>
             </article>
 
             <aside id="sidebar">
