Cafe QT Vlad Website

--- a/CSS Crash Course/index.html
+++ b/CSS Crash Course/index.html
@@ -88,27 +88,27 @@
                 atque unde mollitia quam!</p>
         </div>
 
-        <div class = "clr"></div>
+        <div class="clr"></div>
 
-        <div id = "main-block">
+        <div id="main-block">
             <h3>Heading</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ad iste nihil deleniti, at eos voluptates
                 atque unde mollitia quam!</p>
         </div>
 
-        <div id = "sidebar">
+        <div id="sidebar">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam ad iste nihil deleniti, at eos voluptates
                 atque unde mollitia quam!</p>
         </div>
 
-        <div class ="clr"></div>
+        <div class="clr"></div>
 
-        <div class = "p-box">
+        <div class="p-box">
             <h1>Hello</h1>
             <h2>Goodbye</h2>
         </div>
 
-        <ul class = "my-list">
+        <ul class="my-list">
             <li>List Item</li>
             <li>List Item</li>
             <li>List Item</li>
@@ -120,9 +120,10 @@
 
         </ul>
 
-    </div> <!--container ends-->
+    </div>
+    <!--container ends-->
 
-    <a class = "fix-me button" href = "">Hello</a>
+    <a class="fix-me button" href="">Hello</a>
 
     <div style="margin-top: 500px" ;></div>
 
