About part done

--- a/Cafe Cuties Vladimir/index.html
+++ b/Cafe Cuties Vladimir/index.html
@@ -30,15 +30,16 @@
     <section id="showcase">
         <div class="container">
             <h1>PLEASE GIFT ME CAFE CUTIES VLADIMIR</h1>
-            <p>For everyone who doesn't know what Cafe Cuties Vladimir is, have you really been living? Vladimir is a blood sucking bald headed red robed champion from the HIT GAME League of Legends.</p>
+            <p><span>For everyone who doesn't know what Cafe Cuties Vladimir is, have you really been living? Vladimir
+                    is a blood sucking bald headed red robed champion from the HIT GAME League of Legends.</span></p>
         </div>
     </section>
 
     <section id="gift">
         <div class="container">
-            <h1>GIFT ME MONEY RIGHT NOW</h1>
+            <h1>GIFT ME MONEY RIGHT NOW!!!!!!</h1>
             <form>
-                <input type="number" placeholder="Gift Money">
+                <input type="number" placeholder="100$ Minimum Donation">
                 <button type="submit" class="button_1">Gift</button>
             </form>
         </div>
