--- a/Cafe Cuties Vladimir/about.html
+++ b/Cafe Cuties Vladimir/about.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Affordable and professional web design">
-    <meta name="keywords" content="web design, affordable web design, professional webn design">
+    <meta name="description" content="Please gift me Cafe Cuties Vladimir">
+    <meta name="keywords" content="gift, league of legends, cafe cuties vladimir">
     <meta name="author" content="Fred He">
-    <title>Acme Web Design | About</title>
+    <title>Gift Me Cafe Cuties Vladimir</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -42,19 +42,33 @@
             <article id="main-col">
                 <h1 class="page-title">About Me</h1>
                 <p>Hello all, my name is Fred, a 15 almost 16 year old student. I unfortunatnely play League of Legends, and I just so happen to enjoy playing Vladimir. It would mean the world to me if you would gift me this skin</p>
-                <p class="dark">
-                    I am a very good Vladimir player. This is my <a href = "https://na.op.gg/summoners/na/L9%20GenghisKhan"> op.gg</a> in which you can see how amazing I am at playing Vladimir.
+                <p class="green">
+                    I am a very good Vladimir player. This is my <a target = "_blank" href = "https://na.op.gg/summoners/na/L9%20GenghisKhan"> op.gg</a> in which you can see how amazing I am at playing Vladimir.
                 </p>
             </article>
 
-            <aside id="sidebar">
-                <div class="dark">
+            <aside>
+                <div class="green">
                     <h3>Why You Should Give Me This Skin</h3>
                     <p>If I have this skin, it means that I can easily destroy everyone in this world and in my gold 2 lobbies. I would be very happy if you gave me this skin and happy Fred = happy world.</p>
                 </div>
             </aside>
         </div>
     </section>
+
+    <aside id="sidebar">
+        <div class = "dark">
+            <h3>My Matches on Vlad</h3>
+            <p>As you can hopefully see with eyes as high as Mount Tai. It is clear that I am an absolute <span class = "highlight">DEMON</span> at this game.</p>
+        </div>
+    </aside>
+
+    <div class = "opgg">
+        <img src = "./images/vlad1.png">
+        <img src = "./images/vlad2.png">
+        <img src = "./images/vlad3.png">
+        <img src = "./images/vlad4.png">
+    </div>
 
     <footer>
         <p>Acme Web Design, Copyright &copy; 2022</p>
