--- a/flex.html
+++ b/flex.html
@@ -32,6 +32,7 @@
 </head>
 
 <body>
+    <!--Container-->
     <div id="container">
         <div class="item">1</div>
         <div class="item bigger">2</div>
