Workspace folder added

--- a/Workspace/navbar.html
+++ b/Workspace/navbar.html
@@ -20,9 +20,10 @@
             width: 15%;
             color: #fff;
             font-weight: 200;
-            margin-top: 50px;
+            margin-top: 30px;
             text-align: center;
             font-family: "Cabin", sans-serif;
+            font-size: 24px; 
         }
 
         .image{
