--- a/CSS Grid Website/index.html
+++ b/CSS Grid Website/index.html
@@ -13,21 +13,25 @@
     <!--HEader Showcase-->
     <header id="showcase" class="grid">
         <div class="bg-image"></div>
+        <div class="content-wrap">
         <h1>Welcome to Acme Web Solutions</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, commodi. Optio, adipisci? Provident harum
             facere ex quam illo voluptates corporis!</p>
         <a href="section-b" class="btn">Read More</a>
+    </div>
     </header>
     <!--Main Area-->
     <main id="main">
         <!--Section A-->
-        <section id="id" class="grid">
+        <section id="section-a" class="grid">
             <div class="content-wrap">
                 <h2 class="content-title">Web & Application Development</h2>
+                <div class="content-text">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem fugit laudantium pariatur dicta.
                     Nostrum nisi, praesentium labore, dicta minima debitis nulla laboriosam odio quas eum veniam nemo
                     incidunt numquam laudantium corporis, quia quis itaque maxime unde similique aperiam. Voluptate,
                     odio.</p>
+                </div>
             </div>
         </section>
 
