--- a/CSS Crash Course/index.html
+++ b/CSS Crash Course/index.html
@@ -26,6 +26,12 @@
                 obcaecati! Recusandae molestiae sapiente est, velit atque quam soluta vero, aspernatur deserunt id
                 perferendissit similique perspiciatis debitis unde error, beatae consectetur animi quidem ad minus
                 praesentium.</p>
+                <u1>
+                    <li><a href="#">Category 1</a></li>
+                    <li><a href="#">Category 2</a></li>
+                    <li><a href="#">Category 3</a></li>
+                    <li><a href="#">Category 4</a></li>
+                </u1>
 
         </div>
 
