--- a/Responsive Website/stats.html
+++ b/Responsive Website/stats.html
@@ -6,51 +6,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nightbringer Vladimir</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link href="//db.onlinewebfonts.com/c/b621d1ffb46493164fd62fb7a83ab0ff?family=MarkW05-Medium" rel="stylesheet"
-        type="text/css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
     <nav class="navbar">
         <div class="container">
-            <h1 class="logo">VLADIMIR</h1>
+            <h1><a href="index.html" class="vlad">VLADIMIR</a></h1>
             <ul class="nav">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="gift.html">Gift Now</a>
-                </li>
                 <li>
                     <a href="journey.html">My Journey</a>
                 </li>
                 <li>
+                    <a href="why.html">Why</a>
+                </li>
+                <li>
+                    <a href="gift.html" class="btn">Gift Now</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <section class="showcase">
-        <div class="container">
-            <div class = "text">
-                <h1>MEET NIGHTBRINGER VLADIMIR</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-                <br>
-                <a href="why.html" class="btn">Why Nightbringer Vladimir?</a>
+    <nav>
+        <div class="navbar-2">
+            <div class="container nav-container">
+                <input class="checkbox" type="checkbox" />
+                <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                </div>
+                <div class="logo">
+                    <h1>VLADIMIR</h1>
+                </div>
+                <div class="menu-items">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">My Stats</a></li>
+                    <li><a href="#">My Journey</a></li>
+                    <li><a href="#">Gift Now</a></li>
+                </div>
             </div>
         </div>
-    </section>
+    </nav>
 
-    <!--   
-    <section class = "image">
-        <div class="container-2">
-            <img src="https://cdn.vox-cdn.com/thumbor/ct6sNsgZhkGZKVp5Puh9L-5fGhc=/0x0:1215x717/1120x0/filters:focal(0x0:1215x717):format(webp):no_upscale()/cdn.vox-cdn.com/uploads/chorus_asset/file/19411991/Vladimir_Splash_9.jpeg"
-            class="bg-image">
+    <header class="whyheader" class="grid">
+        <div class="container">
+            <h1>My Stats</h1>
+            <p>Now, you might be wondering, why should Fred be gifted Nightbringer Vladimir? Well, that is simply
+                because I am an absolute godsend on this champion. I simply smurf every game with Vladimir</p>
         </div>
-    </section>
--->
+    </header>
 
 </body>
 
