--- a/Responsive Website/about.html
+++ b/Responsive Website/about.html
@@ -17,7 +17,7 @@
             <h1><a href="index.html" class="home">VLADIMIR</a></h1>
             <ul class="nav">
                 <li>
-                    <a href="about.html">About Vladimir</a>
+                    <a href="stats.html">My Stats</a>
                 </li>
                 <li>
                     <a href="gallery.html">Skin Gallery</a>
@@ -54,58 +54,43 @@
     </nav>
 
     <!--Header-->
-    <header class="stats-header" class="grid">
+    <header class="about-header">
         <div class="container">
             <div class="text">
-                <h1>MY STATS ON VLAD</h1>
-                <p>Now, you might be wondering, why has this guy made a whole website dedicated to Vladimir? Well, that
-                    is simple because my dedication and love for Vladimir is unmatched. Additionally, I am an absolute
-                    godsend on this champion. I simply smurf every game with Vladimir. Take a look at my op.gg, I do not jest Romeo. I AM A FREAK OF NATURE</p>
-                <a href="https://na.op.gg/summoners/na/L9%20GenghisKhan" class="btn" target="_blank">My OP.GG</a>
+                <h1>About Vladimir</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime debitis a quis iusto consequuntur
+                    exercitationem!</p>
             </div>
         </div>
     </header>
 
-    <!--Stat carousel-->
-    <section class="carousel" aria-label="carousel" Tabindex="0">
-        <div class="slides">
-            <div class="slides-item slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
-                <div class="text">
-                    <h1>3.62</h1>
-                    <p>KDA</p>
-                </div>
+    <!--Info boxes-->
+    <section class="about-section">
+        <div class="container">
+            <div class="block block1">
+                <h1>History</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam, molestias!</p>
             </div>
-            <div class="slides-item slide-2" id="slide-2" aria-label="slide 2 of 5" tabindex="0">
-                <div class="text">
-                    <h1>7.2</h1>
-                    <p>CSPM</p>
-                </div>
+            <div class="block block2">
+                <h1>Abilities</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, labore.</p>
             </div>
-            <div class="slides-item slide-3" id="slide-3" aria-label="slide 3 of 5" tabindex="0">
-                <div class="text">
-                    <h1>72%</h1>
-                    <p>WR</p>
-                </div>
+            <div class="block block3">
+                <h1>Pickrate</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, corrupti?</p>
             </div>
-            <div class="slides-item slide-4" id="slide-4" aria-label="slide 4 of 5" tabindex="0">
-                <div class="text">
-                    <h1>17</h1>
-                    <p>Multi Kills</p>
-                </div>
+            <div class="block block4">
+                <h1>Lore</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, sapiente?</p>
             </div>
-            <div class="slides-item slide-5" id="slide-5" aria-label="slide 5 of 5" tabindex="0">
-                <div class="text">
-                    <h1>0</h1>
-                    <p class="spec">Wards Placed</p>
-                </div>
+            <div class="block block5">
+                <h1>Pros</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, sapiente?</p>
             </div>
-        </div>
-        <div class="carousel__nav">
-            <a class="slider-nav" href="#slide-1" aria-label="Go to slide 1">1</a>
-            <a class="slider-nav" href="#slide-2" aria-label="Go to slide 2">2</a>
-            <a class="slider-nav" href="#slide-3" aria-label="Go to slide 3">3</a>
-            <a class="slider-nav" href="#slide-4" aria-label="Go to slide 4">4</a>
-            <a class="slider-nav" href="#slide-5" aria-label="Go to slide 5">5</a>
+            <div class="block block6">
+                <h1>Cons</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, sapiente?</p>
+            </div>
         </div>
     </section>
 
@@ -116,8 +101,9 @@
                 <p>Vladimir | A Project by L9 Genghis Khan</p>
             </div>
             <div class="icons">
-                <a href="https://www.instagram.com/chicken_fred_rice/" target = "_blank" class="fa fa-instagram"></a>
-                <a href="https://www.youtube.com/channel/UCCo9uVLs87GACHfGxsXncig" target = "_blank" class="fa fa-youtube"></a>
+                <a href="https://www.instagram.com/chicken_fred_rice/" target="_blank" class="fa fa-instagram"></a>
+                <a href="https://www.youtube.com/channel/UCCo9uVLs87GACHfGxsXncig" target="_blank"
+                    class="fa fa-youtube"></a>
                 <a href="https://github.com/fredh2006/ICS4U-22-23" target="_blank" class="fa fa-github"></a>
                 <a href="https://open.spotify.com/user/r5ye1cjurmz6u6x0i8ba1jqie" target="_blank"
                     class="fa fa-spotify"></a>
