bulma homepage and login

--- a/Bulma Projects/bulma-hompage.html
+++ b/Bulma Projects/bulma-hompage.html
@@ -7,11 +7,18 @@
     <title>Bulma Landing Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
+    <style>
+        .hero{
+            background-image: linear-gradient(to right, hsl(217, 71%, 53%) , hsl(189, 86%, 53%));
+        }
+      </style>
 </head>
 
 <body>
 
-    <nav class="navbar">
+<div class="has-background-link has-text-link">hello</div>
+
+    <nav class="navbar ">
         <div class="container">
             <div class="navbar-brand">
                 <div class="navbar-item">
@@ -160,32 +167,43 @@
                                         </span>
                                     </button>
                                 </div>
-                                <div class="card-content px-0 pt-1">
+                                <div class="card-content px-0 pt-1 pb-0">
                                     <table class="table is-striped is-fullwidth">
                                         <tbody>
                                             <tr>
-                                                <td><i class="fas fa-regular fa-bell"></i></td>
-                                                <td>Lorem ipsum dolor sit.</td>
+                                                <td><i class="fas fa-regular fa-bell is-centered"></i></td>
+                                                <td><p>Lorem ipsum dolor sit.</p></td>
+                                                <td><button class="button is-inline-block is-primary is-small">Action</button></td>
                                             </tr>
                                             <tr>
                                                 <td><i class="fas fa-regular fa-bell"></i></td>
                                                 <td>Lorem ipsum dolor sit.</td>
+                                                <td><button class="button is-inline-block is-primary is-small">Action</button></td>
                                             </tr>
                                             <tr>
                                                 <td><i class="fas fa-regular fa-bell"></i></td>
                                                 <td>Lorem ipsum dolor sit.</td>
+                                                <td><button class="button is-inline-block is-primary is-small">Action</button></td>
                                             </tr>
                                             <tr>
                                                 <td><i class="fas fa-regular fa-bell"></i></td>
                                                 <td>Lorem ipsum dolor sit.</td>
+                                                <td><button class="button is-inline-block is-primary is-small">Action</button></td>
                                             </tr>
                                             <tr>
                                                 <td><i class="fas fa-regular fa-bell"></i></td>
                                                 <td>Lorem ipsum dolor sit.</td>
+                                                <td><button class="button is-inline-block is-primary is-small">Action</button></td>
                                             </tr>
                                             <tr>
                                                 <td><i class="fas fa-regular fa-bell"></i></td>
                                                 <td>Lorem ipsum dolor sit.</td>
+                                                <td><button class="button is-inline-block is-primary is-small">Action</button></td>
+                                            </tr>
+                                            <tr>
+                                                <td><i class="fas fa-regular fa-bell"></i></td>
+                                                <td>Lorem ipsum dolor sit.</td>
+                                                <td><button class="button is-inline-block is-primary is-small">Action</button></td>
                                             </tr>
                                         </tbody>
                                     </table>
