--- a/Bulma Projects/bulma-login.html
+++ b/Bulma Projects/bulma-login.html
@@ -7,6 +7,7 @@
   <title>Bulma Login</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
+  <link rel="stylesheet" href="./styles/styleslogin.css">
 </head>
 
 <body>
@@ -18,6 +19,7 @@
         <div class="title">
           Login
         </div>
+        <hr class = "divider">
         <div class="subtitle">
           Please login to proceed.
         </div>
@@ -30,27 +32,30 @@
       <div class="column">
 
         <div class="has-text-centered">
-          <figure class="image is-128x128 is-inline-block is-overlay">
+          <figure class ="figure image is-128x128 is-inline-block is-overlay">
             <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
           </figure>
-          </div>   
+          </div> 
 
-        <div class="card">
+        <div class="card">  
           <div class="card-content">
-
+                <br>
+                <br>
+                <br>
+                <br>
             <div class="field mb-4">
               <div class="control">
                 <input class="input is-medium" type="text" placeholder="Your Email">
               </div>
             </div>
 
-            <div class="field mb-5">
+            <div class="field mb-4">
               <div class="control">
                 <input class="input is-medium" type="text" placeholder="Your Password">
               </div>
             </div>
 
-            <div class="field has-text-centered mb-5">
+            <div class="field has-text-centered mb-4">
               <div class="control">
                 <label class="checkbox">
                   <input type="checkbox">
