teams pagination and  improve js efficiency

--- a/Sports Statistics Application/matches.html
+++ b/Sports Statistics Application/matches.html
@@ -27,6 +27,11 @@
         </div>
     </nav>
 
+    <nav class="pagination is-centered">
+        <div class="pagination-list">
+        </div>
+      </nav>
+
 
     <section class="container" id = "container">
     </section>
