--- a/Sports Statistics Application/standings.html
+++ b/Sports Statistics Application/standings.html
@@ -31,28 +31,28 @@
             <div class="field">
                 <label class="label">Group</label>
                 <div class="control">
-                    <input class="input G" type="text" placeholder="A, B, C, D" required>
+                    <input class="input group" type="text" placeholder="A, B, C, D" required>
                 </div>
             </div>
 
             <div class="field">
                 <label class="label">Team 1</label>
                 <div class="control">
-                    <input class="input T1" type="text" placeholder="Pick a team from chosen group" required>
+                    <input class="input team1" type="text" placeholder="Pick a team from chosen group" required>
                 </div>
             </div>
 
             <div class="field">
                 <label class="label">Team 2</label>
                 <div class="control">
-                    <input class="input T2" type="text" placeholder="Pick another team from chosen group" required>
+                    <input class="input team2" type="text" placeholder="Pick another team from chosen group" required>
                 </div>
             </div>
 
             <div class="field">
                 <label class="label">Day</label>
                 <div class="control">
-                    <input class="input D" type="text" placeholder="Pick a day between 1 - 8" required>
+                    <input class="input day" type="text" placeholder="Pick a day between 1 - 8" required>
                 </div>
             </div>
 
@@ -60,7 +60,7 @@
                 <label class="label ">Winner</label>
                 <div class="control">
                     <div class="select">
-                        <select class="S">
+                        <select class="select-options">
                             <option>Team 1</option>
                             <option>Team 2</option>
                         </select>
